--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/holidays_App
 endorsed.classpath=
 excludes=
+file.reference.flatlaf-3.2.jar=..\\..\\..\\Downloads\\flatlaf-3.2.jar
 file.reference.flatlaf-3.6.1.jar=C:\\Users\\user\\Downloads\\flatlaf-3.6.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.flatlaf-3.6.1.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.flatlaf-3.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
