--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,12 +37,14 @@ endorsed.classpath=
 excludes=
 file.reference.flatlaf-3.2.jar=..\\..\\..\\Downloads\\flatlaf-3.2.jar
 file.reference.flatlaf-3.6.1.jar=C:\\Users\\user\\Downloads\\flatlaf-3.6.1.jar
+file.reference.LGoodDatePicker-11.2.1-executable-demo.jar=C:\\Users\\Eng-Adel Programing\\Downloads\\LGoodDatePicker-11.2.1-executable-demo.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.flatlaf-3.6.1.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.flatlaf-3.2.jar}
+    ${file.reference.flatlaf-3.2.jar}:\
+    ${file.reference.LGoodDatePicker-11.2.1-executable-demo.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
